# Prise3d_StereoThreshold_Alioscopy

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  readme.txt
config/: config.ini  configDemo.ini  config_tutorial.txt  scenes.ini  scenes.txt  scenesDemo.ini
e/: glslshader.c  glslshader.h  main.c  main.h  mixedwindow.c  mixedwindow.h
ext/: P3dComponent.cpp  P3dComponent.h
script/: ExperimentAnalysis.py  MLE_Stimulus.py
shader/: debug.fs  fb.fs  fb.vs  fb_noise.fs  fragment.fs  glsl_mix.fs  glsl_mix.vs  glsl_mix_update.fs
src/: context.h  main.cpp  mesh.h  shader.h  stereoMesh.h  texture.h  textureLoader.h  utility.h
